--- a/siereweb/src/java/reportes/venta/Cotizacion.jrxml
+++ b/siereweb/src/java/reportes/venta/Cotizacion.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Cotizacion" pageWidth="702" pageHeight="1085" columnWidth="702" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="7c19f3c5-0102-45b1-9508-b3a1735ec190">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.2100000000000002"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="1"/>
+	<property name="ireport.y" value="335"/>
 	<parameter name="j_Cotizacion" class="java.lang.Long"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String">
 		<defaultValueExpression><![CDATA["C:\\Users\\breyner.robles\\Documents\\NetBeansProjects\\pandora\\"]]></defaultValueExpression>
@@ -175,8 +175,8 @@ WHERE
 				</box>
 				<text><![CDATA[]]></text>
 			</staticText>
-			<textField>
-				<reportElement mode="Opaque" x="1" y="280" width="366" height="20" backcolor="#FF9900" uuid="60598403-03f6-48f8-aa7f-ffa604bab367"/>
+			<textField isStretchWithOverflow="true">
+				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="1" y="280" width="366" height="20" backcolor="#FF9900" uuid="60598403-03f6-48f8-aa7f-ffa604bab367"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="0.0"/>
@@ -415,7 +415,7 @@ WHERE
 				<text><![CDATA[Los valores anteriores no incluyen Iva, por favor incrementar el 19% al costo total del evento.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="453" y="0" width="115" height="20" backcolor="#CCCCCC" uuid="925e4db6-019c-4b6c-9f36-9dca7a430519"/>
+				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="453" y="0" width="115" height="20" backcolor="#CCCCCC" uuid="925e4db6-019c-4b6c-9f36-9dca7a430519"/>
 				<box>
 					<topPen lineWidth="0.75"/>
 					<leftPen lineWidth="0.75"/>
@@ -423,7 +423,7 @@ WHERE
 					<rightPen lineWidth="0.75"/>
 				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font isBold="false"/>
+					<font isBold="false" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[Subtotal]]></text>
 			</staticText>
@@ -443,7 +443,7 @@ WHERE
 				<text><![CDATA[EL DESCUENTO SOLO APLICA PARA EL PAQUETE COMPLETO CON TODOS LOS ITEMS PROPUESTOS. AL ELIMINAR ALGUNO DE ESTOS EL % DE DESCUENTO DISMINUIRÁ PROPORCIONALMENTE ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="453" y="40" width="115" height="20" backcolor="#FF9900" uuid="66c7fc8b-0827-463b-8bdc-2d8dd4fdf3ad"/>
+				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="453" y="40" width="115" height="20" backcolor="#FF9900" uuid="66c7fc8b-0827-463b-8bdc-2d8dd4fdf3ad"/>
 				<box>
 					<topPen lineWidth="0.75"/>
 					<leftPen lineWidth="0.75"/>
@@ -451,7 +451,7 @@ WHERE
 					<rightPen lineWidth="0.75"/>
 				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font isBold="true" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[Costo Total]]></text>
 			</staticText>
@@ -469,8 +469,8 @@ WHERE
 				</textElement>
 				<text><![CDATA[La cancelación del evento con menos de 24 horas obliga al cliente al pago de un NO SHOW con porcentaje entre  50% y 80% del total del Evento]]></text>
 			</staticText>
-			<textField pattern="¤ #,##0" isBlankWhenNull="true">
-				<reportElement x="568" y="20" width="116" height="20" uuid="c83bbdc1-c0c2-4382-842d-fe32731bec40">
+			<textField isStretchWithOverflow="true" pattern="¤ #,##0" isBlankWhenNull="true">
+				<reportElement stretchType="RelativeToBandHeight" x="568" y="20" width="116" height="20" uuid="c83bbdc1-c0c2-4382-842d-fe32731bec40">
 					<printWhenExpression><![CDATA[$F{vnt_registroventa_rgvt_descuento} != null]]></printWhenExpression>
 				</reportElement>
 				<box>
@@ -481,8 +481,8 @@ WHERE
 				</textElement>
 				<textFieldExpression><![CDATA[$F{rgvt_descuento}]]></textFieldExpression>
 			</textField>
-			<textField pattern="###0.00" isBlankWhenNull="true">
-				<reportElement mode="Transparent" x="516" y="20" width="29" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="649dd5e4-8e0e-4444-9878-7b06a20ff139"/>
+			<textField isStretchWithOverflow="true" pattern="###0.00" isBlankWhenNull="true">
+				<reportElement stretchType="RelativeToBandHeight" mode="Transparent" x="516" y="20" width="29" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="649dd5e4-8e0e-4444-9878-7b06a20ff139"/>
 				<box>
 					<topPen lineWidth="0.75"/>
 					<bottomPen lineWidth="0.75"/>
@@ -495,7 +495,7 @@ WHERE
 				<textFieldExpression><![CDATA[$F{vnt_registroventa_rgvt_descuento}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="545" y="20" width="23" height="20" uuid="925e4db6-019c-4b6c-9f36-9dca7a430519">
+				<reportElement stretchType="RelativeToBandHeight" x="545" y="20" width="23" height="20" uuid="925e4db6-019c-4b6c-9f36-9dca7a430519">
 					<printWhenExpression><![CDATA[$F{vnt_registroventa_rgvt_descuento} != null]]></printWhenExpression>
 				</reportElement>
 				<box>
@@ -504,7 +504,9 @@ WHERE
 					<bottomPen lineWidth="0.75"/>
 					<rightPen lineWidth="0.75"/>
 				</box>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font isStrikeThrough="true"/>
+				</textElement>
 				<text><![CDATA[%]]></text>
 			</staticText>
 			<staticText>
@@ -514,8 +516,8 @@ WHERE
 				</box>
 				<text><![CDATA[]]></text>
 			</staticText>
-			<textField pattern="¤ #,##0" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="568" y="40" width="116" height="20" forecolor="#000000" backcolor="#FF9900" uuid="0b87cf1e-ca0c-44f9-8e6f-f4e6a60b1df7"/>
+			<textField isStretchWithOverflow="true" pattern="¤ #,##0" isBlankWhenNull="true">
+				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="568" y="40" width="116" height="20" forecolor="#000000" backcolor="#FF9900" uuid="0b87cf1e-ca0c-44f9-8e6f-f4e6a60b1df7"/>
 				<box>
 					<topPen lineWidth="0.75"/>
 					<leftPen lineWidth="0.75"/>
@@ -528,8 +530,8 @@ WHERE
 				</textElement>
 				<textFieldExpression><![CDATA[$F{subtotal}]]></textFieldExpression>
 			</textField>
-			<textField pattern="¤ #,##0" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="568" y="0" width="116" height="20" forecolor="#000000" backcolor="#CCCCCC" uuid="0b87cf1e-ca0c-44f9-8e6f-f4e6a60b1df7"/>
+			<textField isStretchWithOverflow="true" pattern="¤ #,##0" isBlankWhenNull="true">
+				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="568" y="0" width="116" height="20" forecolor="#000000" backcolor="#CCCCCC" uuid="0b87cf1e-ca0c-44f9-8e6f-f4e6a60b1df7"/>
 				<box>
 					<topPen lineWidth="0.75"/>
 					<leftPen lineWidth="0.75"/>
@@ -604,7 +606,7 @@ WHERE
 				<reportElement x="2" y="67" width="682" height="1" uuid="049ed5fb-b12f-4277-867c-f982708aa77d"/>
 			</line>
 			<staticText>
-				<reportElement x="454" y="20" width="62" height="20" uuid="925e4db6-019c-4b6c-9f36-9dca7a430519">
+				<reportElement stretchType="RelativeToBandHeight" x="454" y="20" width="62" height="20" uuid="925e4db6-019c-4b6c-9f36-9dca7a430519">
 					<printWhenExpression><![CDATA[$F{vnt_registroventa_rgvt_descuento} != null]]></printWhenExpression>
 				</reportElement>
 				<box>
@@ -614,9 +616,25 @@ WHERE
 					<rightPen lineWidth="0.0"/>
 				</box>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
-					<font size="8"/>
+					<font size="8" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[Dto. Promedio]]></text>
+			</staticText>
+			<staticText>
+				<reportElement stretchType="RelativeToBandHeight" x="2" y="38" width="184" height="20" uuid="b28f3695-915a-44e3-a78d-599acd51eded"/>
+				<textElement verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[VALIDEZ DE LA OFERTA: 15 DÍAS ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement stretchType="RelativeToBandHeight" x="186" y="38" width="267" height="20" uuid="0182854d-4753-4bf9-961d-a44c9a848a8b">
+					<printWhenExpression><![CDATA[new SimpleDateFormat("MM").format(new Date()).equals("11") ||new SimpleDateFormat("MM").format(new Date()).equals("12") ]]></printWhenExpression>
+				</reportElement>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isBold="false" isStrikeThrough="false"/>
+				</textElement>
+				<text><![CDATA[- APLICA RESTRICCIONES 24 Y 31 DE DICIEMBRE]]></text>
 			</staticText>
 		</band>
 	</lastPageFooter>
