--- a/siereweb/src/java/reportes/venta/SubRepCotizacion_1.jrxml
+++ b/siereweb/src/java/reportes/venta/SubRepCotizacion_1.jrxml
@@ -40,7 +40,7 @@ WHERE
 	<title>
 		<band height="29" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="48c34a3d-202e-4346-a8de-3c1df0ce6915" mode="Opaque" x="0" y="0" width="97" height="29" backcolor="#CCCCCC"/>
+				<reportElement mode="Opaque" x="0" y="0" width="97" height="29" backcolor="#CCCCCC" uuid="48c34a3d-202e-4346-a8de-3c1df0ce6915"/>
 				<box>
 					<topPen lineWidth="0.75"/>
 					<leftPen lineWidth="0.75"/>
@@ -53,7 +53,7 @@ WHERE
 				<text><![CDATA[CANT]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="227a7eb9-52d1-4cff-bb1c-53058832c548" mode="Opaque" x="97" y="0" width="356" height="29" backcolor="#CCCCCC"/>
+				<reportElement mode="Opaque" x="97" y="0" width="356" height="29" backcolor="#CCCCCC" uuid="227a7eb9-52d1-4cff-bb1c-53058832c548"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -66,7 +66,7 @@ WHERE
 				<text><![CDATA[SERVICIO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="833e4d8b-21fa-41f7-9d6f-71871366202e" mode="Opaque" x="453" y="0" width="119" height="29" backcolor="#CCCCCC"/>
+				<reportElement mode="Opaque" x="453" y="0" width="119" height="29" backcolor="#CCCCCC" uuid="833e4d8b-21fa-41f7-9d6f-71871366202e"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -79,7 +79,7 @@ WHERE
 				<text><![CDATA[C. UNITARIO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="0a491ee9-c4da-4ac5-a75c-b486c8ca38c1" mode="Opaque" x="572" y="0" width="111" height="29" backcolor="#CCCCCC"/>
+				<reportElement mode="Opaque" x="572" y="0" width="111" height="29" backcolor="#CCCCCC" uuid="0a491ee9-c4da-4ac5-a75c-b486c8ca38c1"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -96,7 +96,7 @@ WHERE
 	<detail>
 		<band height="28" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="9eaa6cd5-f329-43e7-a857-3bbf6a8691af" stretchType="RelativeToBandHeight" x="0" y="0" width="97" height="28"/>
+				<reportElement stretchType="RelativeToBandHeight" x="0" y="0" width="97" height="28" uuid="9eaa6cd5-f329-43e7-a857-3bbf6a8691af"/>
 				<box>
 					<leftPen lineWidth="0.75"/>
 					<bottomPen lineWidth="0.75"/>
@@ -105,7 +105,7 @@ WHERE
 				<textFieldExpression><![CDATA[$F{srvxvent_cantidad}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="28e6bd83-818a-48f6-a626-a999370624f4" stretchType="RelativeToBandHeight" x="97" y="0" width="99" height="28"/>
+				<reportElement stretchType="RelativeToBandHeight" x="97" y="0" width="99" height="28" uuid="28e6bd83-818a-48f6-a626-a999370624f4"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -118,7 +118,7 @@ WHERE
 				<textFieldExpression><![CDATA[$F{vsrv_nombre}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="¤ #,##0" isBlankWhenNull="true">
-				<reportElement uuid="0691eb59-2b46-4027-a2ef-d8b6fea2f38a" stretchType="RelativeToBandHeight" x="453" y="0" width="119" height="28"/>
+				<reportElement stretchType="RelativeToBandHeight" x="453" y="0" width="119" height="28" uuid="0691eb59-2b46-4027-a2ef-d8b6fea2f38a"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -129,7 +129,7 @@ WHERE
 				<textFieldExpression><![CDATA[$F{srvxvent_precioventa}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="¤ #,##0" isBlankWhenNull="true">
-				<reportElement uuid="380b28b0-5c19-4f5d-8258-913ca4070038" stretchType="RelativeToBandHeight" x="572" y="0" width="111" height="28"/>
+				<reportElement stretchType="RelativeToBandHeight" x="572" y="0" width="111" height="28" uuid="380b28b0-5c19-4f5d-8258-913ca4070038"/>
 				<box>
 					<leftPen lineWidth="0.75"/>
 					<bottomPen lineWidth="0.75"/>
@@ -139,7 +139,7 @@ WHERE
 				<textFieldExpression><![CDATA[$F{srvxvent_valtotalclnt}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="89cc1918-897e-4f38-a644-ce66417dfbef" stretchType="RelativeToBandHeight" x="196" y="0" width="257" height="28"/>
+				<reportElement stretchType="RelativeToBandHeight" x="196" y="0" width="257" height="28" uuid="89cc1918-897e-4f38-a644-ce66417dfbef"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.0"/>
