LF - Ajustar botones de acciòn en los formularios de administraciòn. LF - Crear pàgina y SLBEan de administración independiente para unificar todos los procesos de administración, se debe verificar duplicidad de funcionalidad. LF - Eliminar hojas de estilo no utilizadas.

--- a/siereweb/web/css/styles.css
+++ b/siereweb/web/css/styles.css
@@ -58,7 +58,7 @@ body {
         margin-top:360px;
 	margin-left:-470px;
 	float:left;
-	//background:url(../images/bg-pattern.png) repeat top left;
+	/*background:url(../images/bg-pattern.png) repeat top left;*/
 }
 
 #btn-kids {
@@ -67,7 +67,7 @@ body {
         margin-top:0;
 	margin-left:-470px;
 	float:left;
-	//background:url(../images/bg-pattern.png) repeat top left;
+	/*background:url(../images/bg-pattern.png) repeat top left;*/
 }
 #texto {
 	width:311px;
