05/05/2018 JAOR Actualiza reporte orden producciòn: nombres en firmas

--- a/siereweb/src/java/reportes/venta/reporteOrdenProducionCoorp.jrxml
+++ b/siereweb/src/java/reportes/venta/reporteOrdenProducionCoorp.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reporteOrdenProducionCoorp" pageWidth="884" pageHeight="1150" columnWidth="824" leftMargin="30" rightMargin="30" topMargin="30" bottomMargin="30" uuid="35506cbc-035e-4281-b2ac-1452397a0ead">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="188"/>
-	<property name="ireport.y" value="240"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="40"/>
 	<parameter name="p_idorden" class="java.lang.Long">
 		<defaultValueExpression><![CDATA[61L]]></defaultValueExpression>
 	</parameter>
@@ -745,11 +745,11 @@ WHERE
 				<textElement>
 					<font size="10"/>
 				</textElement>
-				<text><![CDATA[HEIMAR RAUL GAMBOA]]></text>
+				<text><![CDATA[FELIPE CASTILLO MUÑOZ]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="71" y="80" width="156" height="20" uuid="6462cf29-4060-4358-9b7b-707b6657b6a4"/>
-				<text><![CDATA[CAMILO ALEMAN SOGAMOSO]]></text>
+				<text><![CDATA[FABIAN CASTELBLANCO DAZA]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="270" y="60" width="276" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="f5f23ec3-7e55-48eb-9096-bc88d5c3d9cc"/>
