--- a/siereweb/src/java/reportes/venta/Cotizacion.jrxml
+++ b/siereweb/src/java/reportes/venta/Cotizacion.jrxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Cotizacion" pageWidth="702" pageHeight="1085" columnWidth="702" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="7c19f3c5-0102-45b1-9508-b3a1735ec190">
 	<property name="ireport.zoom" value="1.2100000000000002"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="178"/>
+	<property name="ireport.jasperserver.url" value="http://localhost:8084/jasperserver/"/>
+	<property name="ireport.jasperserver.user" value="jasperadmin"/>
+	<property name="ireport.jasperserver.report.resource" value="/reports/kayros/general/CotizacionCorporativo_files/main_jrxml"/>
+	<property name="ireport.jasperserver.reportUnit" value="/reports/kayros/general/CotizacionCorporativo"/>
 	<parameter name="j_Cotizacion" class="java.lang.Long"/>
-	<parameter name="SUBREPORT_DIR" class="java.lang.String">
-		<defaultValueExpression><![CDATA["C:\\Users\\breyner.robles\\Documents\\NetBeansProjects\\pandora\\"]]></defaultValueExpression>
+	<parameter name="subreporte" class="java.lang.String">
+		<defaultValueExpression><![CDATA["repo:SubRepCotizacion.jrxml"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="rutalogo" class="java.lang.String">
-		<defaultValueExpression><![CDATA["C:\\Users\\breyner.robles\\Documents\\NetBeansProjects\\pandora\\sieree\\siereweb\\src\\java\\reportes\\venta\\logos\\maximus.jpg"]]></defaultValueExpression>
+	<parameter name="subreporte1" class="java.lang.String">
+		<defaultValueExpression><![CDATA["repo:SubRepCotizacion_1.jrxml"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT
@@ -150,15 +155,9 @@ WHERE
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cln_nombres}]]></textFieldExpression>
 			</textField>
-			<image scaleImage="FillFrame" isLazy="true" onErrorType="Blank">
+			<image>
 				<reportElement x="0" y="0" width="684" height="106" uuid="31054112-ca33-450f-a769-c7753fe1795d"/>
-				<box>
-					<topPen lineWidth="0.75"/>
-					<leftPen lineWidth="0.75"/>
-					<bottomPen lineWidth="0.75"/>
-					<rightPen lineWidth="0.75"/>
-				</box>
-				<imageExpression><![CDATA[$P{rutalogo}]]></imageExpression>
+				<imageExpression><![CDATA["repo:logo_MP.gif"]]></imageExpression>
 			</image>
 			<textField pattern="EEEEE dd MMMMM yyyy" isBlankWhenNull="true">
 				<reportElement x="62" y="106" width="506" height="20" uuid="bc26c9c3-566b-45f6-bf98-7791df1c02b0"/>
@@ -278,7 +277,7 @@ WHERE
 					<subreportParameterExpression><![CDATA[$F{rgvt_id}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + ($F{presentar} ? "SubRepCotizacion_1.jasper": "SubRepCotizacion.jasper")]]></subreportExpression>
+				<subreportExpression><![CDATA[($F{presentar} ? $P{subreporte1}: $P{subreporte})]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
@@ -469,7 +468,7 @@ WHERE
 				</textElement>
 				<text><![CDATA[La cancelación del evento con menos de 24 horas obliga al cliente al pago de un NO SHOW con porcentaje entre  50% y 80% del total del Evento]]></text>
 			</staticText>
-			<textField isStretchWithOverflow="true" pattern="¤ #,##0" isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" pattern="$ #,##0" isBlankWhenNull="true">
 				<reportElement stretchType="RelativeToBandHeight" x="568" y="20" width="116" height="20" uuid="c83bbdc1-c0c2-4382-842d-fe32731bec40">
 					<printWhenExpression><![CDATA[$F{vnt_registroventa_rgvt_descuento} != null]]></printWhenExpression>
 				</reportElement>
@@ -516,7 +515,7 @@ WHERE
 				</box>
 				<text><![CDATA[]]></text>
 			</staticText>
-			<textField isStretchWithOverflow="true" pattern="¤ #,##0" isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" pattern="$ #,##0" isBlankWhenNull="true">
 				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="568" y="40" width="116" height="20" forecolor="#000000" backcolor="#FF9900" uuid="0b87cf1e-ca0c-44f9-8e6f-f4e6a60b1df7"/>
 				<box>
 					<topPen lineWidth="0.75"/>
@@ -530,7 +529,7 @@ WHERE
 				</textElement>
 				<textFieldExpression><![CDATA[$F{subtotal}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="¤ #,##0" isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" pattern="$ #,##0" isBlankWhenNull="true">
 				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="568" y="0" width="116" height="20" forecolor="#000000" backcolor="#CCCCCC" uuid="0b87cf1e-ca0c-44f9-8e6f-f4e6a60b1df7"/>
 				<box>
 					<topPen lineWidth="0.75"/>
