--- a/siereweb/src/java/reportes/venta/SubRepCotizacion_1.jrxml
+++ b/siereweb/src/java/reportes/venta/SubRepCotizacion_1.jrxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="SubRepCotizacion" pageWidth="683" pageHeight="764" columnWidth="683" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="8889d62e-c4d2-4c7e-9f30-3b74fe496e85">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
@@ -129,7 +130,7 @@ ORDER BY vnt_servicio."vsrv_nombre"]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{srvxvent_precioventa}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="¤ #,##0" isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" pattern="$ #,##0" isBlankWhenNull="true">
 				<reportElement stretchType="RelativeToBandHeight" x="572" y="0" width="111" height="28" uuid="380b28b0-5c19-4f5d-8258-913ca4070038"/>
 				<box>
 					<leftPen lineWidth="0.75"/>
